# banksimulation

backendapi/: CMakeLists.txt  SystemTest.http  bankapiserver.cpp  bankrequests.cpp  bankrequests.h  http-client.env.json  main.cpp  main.h  playing.cpp
sharedabstractclasses/: EndpointTemplate.cpp  EndpointTemplate.h
vendorapi/: vendorapiserver.cpp
